<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.GamePlayActivity"
        android:background="@drawable/bg_texture">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:id="@+id/tv_hnint"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/primary_text_light"
            android:text="Hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:id="@+id/tv_timer"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/primary_text_light"
            android:text="Hint"/>
        <com.mmspring.sudoku.ui.custom.BoardView
            android:id="@+id/sudokuBoardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@+id/tv_hnint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_edit_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sudokuBoardView"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/noteButton"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonbackground"
                app:srcCompat="@drawable/ic_notes"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/deleteButton"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonbackground"
                app:srcCompat="@drawable/ic_delete" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/hintsButton"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonbackground"
                app:srcCompat="@drawable/ic_hints" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/saveButton"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonbackground"
                app:srcCompat="@drawable/ic_save" />
        </LinearLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_numbers_layout"
            android:rowCount="1"
            android:columnCount="9"
            app:layout_constraintTop_toBottomOf="@+id/button_edit_layout"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/one"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:layout_row="0"
                android:layout_column="0"
                android:clickable="true"/>
            <TextView
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/two"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/three"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/four"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/five"
                android:layout_row="0"
                android:layout_column="4"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/six"
                android:layout_row="0"
                android:layout_column="5"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/seven"
                android:layout_row="0"
                android:layout_column="6"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/eight"
                android:layout_row="0"
                android:layout_column="7"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/nine"
                android:layout_row="0"
                android:layout_column="8"
                android:layout_marginRight="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
        </GridLayout>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>