<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.GamePlayActivity"
        android:background="@drawable/bg_texture">

                <LinearLayout
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tbtv_title"
                        android:textSize="20sp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/primary_text_light"
                        android:text="@string/app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/tv_hnint"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/primary_text_light"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_bomb"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/primary_text_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_arrow"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@android:color/primary_text_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:id="@+id/tv_timer"
                        android:textSize="14sp"
                        android:textColor="@android:color/primary_text_light"
                        android:drawableStart="@drawable/ic_time"
                        android:text="0"/>
                </LinearLayout>
        <com.mmspring.sudoku.ui.custom.BoardView
            android:id="@+id/sudokuBoardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_layout"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/noteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonbackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"
            app:srcCompat="@drawable/ic_notes" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttonbackground"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/noteButton"
            app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"
            app:srcCompat="@drawable/ic_delete" />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/hintsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttonbackground"
            app:srcCompat="@drawable/ic_hints"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bombButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttonbackground"
            app:srcCompat="@drawable/ic_bomb"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/hintsButton"
            app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/arrowButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonbackground"
            app:layout_constraintStart_toEndOf="@+id/bombButton"
            app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"
            app:srcCompat="@drawable/ic_arrow" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/saveButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonbackground"
            app:layout_constraintStart_toEndOf="@+id/arrowButton"
            app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"
            app:srcCompat="@drawable/ic_save" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_numbers_layout"
            android:rowCount="1"
            android:columnCount="9"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/one"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:layout_row="0"
                android:layout_column="0"
                android:clickable="true"/>
            <TextView
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/two"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/three"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/four"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/five"
                android:layout_row="0"
                android:layout_column="4"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/six"
                android:layout_row="0"
                android:layout_column="5"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/seven"
                android:layout_row="0"
                android:layout_column="6"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/eight"
                android:layout_row="0"
                android:layout_column="7"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
            <TextView
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="@string/nine"
                android:layout_row="0"
                android:layout_column="8"
                android:layout_marginEnd="6dp"
                android:textColor="@color/teal_700"
                android:clickable="true"/>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>