<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MainFragment"
        android:background="@drawable/background">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="30sp"
            android:layout_marginTop="@dimen/margin_forth"
            android:layout_marginStart="@dimen/margin_twice"
            android:layout_marginEnd="@dimen/margin_twice"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/app_name"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="395dp"
            android:layout_height="395dp"
            android:layout_marginBottom="@dimen/margin_twice"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardMaxElevation="5dp"
                android:id="@+id/card_level"
                app:cardBackgroundColor="@android:color/transparent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/buttonbackground"
                    android:drawableTop="@drawable/ic_play"
                    android:gravity="center"
                    android:text="@string/custom_game"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardMaxElevation="5dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnWeekly"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/buttonbackground"
                    android:drawableTop="@drawable/ic_week"
                    android:gravity="center"
                    android:text="@string/weekly"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardMaxElevation="5dp"
                app:cardBackgroundColor="@android:color/transparent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonbackground"
                    android:drawableTop="@drawable/ic_about"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/about_us"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardMaxElevation="5dp"
                app:cardBackgroundColor="@android:color/transparent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnStats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/buttonbackground"
                    android:drawableTop="@drawable/ic_stats"
                    android:gravity="center"
                    android:text="@string/stats"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardMaxElevation="5dp"
                    app:cardBackgroundColor="@android:color/transparent">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnHints"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/buttonbackground"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/hints"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="22sp" />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardMaxElevation="5dp"
                    app:cardBackgroundColor="@android:color/transparent">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBombs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:paddingTop="5dp"
                        android:background="@drawable/buttonbackground"
                        android:gravity="center"
                        android:text="@string/bombs"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="22sp" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardMaxElevation="5dp"
                    app:cardBackgroundColor="@android:color/transparent">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnArrows"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:paddingTop="5dp"
                        android:background="@drawable/buttonbackground"
                        android:gravity="center"
                        android:text="@string/arrows"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="22sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>